@@ -15,6 +15,7 @@ import java.io.StringWriter;
 import java.util.Comparator;
 import java.util.List;
 import java.util.TreeMap;
+import javax.script.Bindings;
 import lombok.NoArgsConstructor;
 import lombok.ToString;
 import lombok.extern.log4j.Log4j2;
@@ -43,7 +44,8 @@ public class Magics extends AbstractMagic {
     }
 
     @Override
-    public void execute(String magic, String code) throws Exception {
+    public void execute(Bindings bindings,
+                        String magic, String code) throws Exception {
         throw new IllegalArgumentException(magic);
     }
 
