@@ -2,6 +2,7 @@ package ganymede.shell.magic;
 
 import ball.annotation.ServiceProviderFor;
 import ganymede.shell.Magic;
+import javax.script.Bindings;
 import lombok.NoArgsConstructor;
 import lombok.ToString;
 import lombok.extern.log4j.Log4j2;
@@ -17,10 +18,13 @@ import lombok.extern.log4j.Log4j2;
 @NoArgsConstructor @ToString @Log4j2
 public class Sh extends Script {
     @Override
-    public void execute(String magic, String code) throws Exception {
+    public void execute(Bindings bindings,
+                        String magic, String code) throws Exception {
         try {
-            super.execute(CELL + super.getMagicNames()[0]
-                          + " " + magic.substring(CELL.length()),
+            super.execute(bindings,
+                          String.format("%s%s %s",
+                                        CELL, super.getMagicNames()[0],
+                                        magic.substring(CELL.length())),
                           code);
         } catch (IllegalArgumentException exception) {
             throw new IllegalArgumentException(magic);
