@@ -5,6 +5,7 @@ import ganymede.shell.Magic;
 import java.io.StringReader;
 import java.util.Objects;
 import java.util.Properties;
+import javax.script.Bindings;
 import lombok.NoArgsConstructor;
 import lombok.ToString;
 import lombok.extern.log4j.Log4j2;
@@ -20,7 +21,8 @@ import lombok.extern.log4j.Log4j2;
 @NoArgsConstructor @ToString @Log4j2
 public class SysProperties extends AbstractMagic {
     @Override
-    public void execute(String magic, String code) throws Exception {
+    public void execute(Bindings bindings,
+                        String magic, String code) throws Exception {
         if (! code.isBlank()) {
             try (var reader = new StringReader(code)) {
                 var in = new Properties(System.getProperties());
