@@ -5,6 +5,7 @@ import ganymede.shell.Magic;
 import ganymede.shell.Shell;
 import java.io.InputStream;
 import java.io.PrintStream;
+import javax.script.Bindings;
 import lombok.NoArgsConstructor;
 import lombok.ToString;
 import lombok.extern.log4j.Log4j2;
@@ -29,7 +30,8 @@ public class Types extends AbstractMagic {
     }
 
     @Override
-    public void execute(String magic, String code) throws Exception {
+    public void execute(Bindings bindings,
+                        String magic, String code) throws Exception {
         throw new IllegalArgumentException(magic);
     }
 }
